--- a/local/build.gradle
+++ b/local/build.gradle
@@ -4,6 +4,20 @@ plugins {
     id 'maven-publish'
 }
 
+project.ext {
+    artifactId = 'local_cloud_writer'
+    groupId = 'com.github.aakumykov'
+
+    majorVersionNum = commonMajorVersionNumber
+    minorVersionNum = commonMinorVersionNumber
+    patchVersionNum = commonPatchVersionNumber
+    suffix = commonVersionSuffix
+
+    versionCode = commonVersionCode
+
+    versionName = majorVersionNum + "." + minorVersionNum + "." + patchVersionNum + "-" + suffix
+}
+
 android {
     namespace 'com.github.aakumykov.local_cloud_writer'
     compileSdk 34
@@ -28,6 +42,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    publishing {
+        singleVariant('release') {
+            withSourcesJar()
+        }
+    }
 }
 
 dependencies {
@@ -39,4 +58,17 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = project.groupId
+            artifactId = project.artifactId
+            version = versionName
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
 }
