--- a/yandex_disk/build.gradle
+++ b/yandex_disk/build.gradle
@@ -4,6 +4,20 @@ plugins {
     id 'maven-publish'
 }
 
+project.ext {
+    artifactId = 'yandex_disk_cloud_writer'
+    groupId = 'com.github.aakumykov'
+
+    majorVersionNum = commonMajorVersionNumber
+    minorVersionNum = commonMinorVersionNumber
+    patchVersionNum = commonPatchVersionNumber
+    suffix = commonVersionSuffix
+
+    versionCode = commonVersionCode
+
+    versionName = majorVersionNum + "." + minorVersionNum + "." + patchVersionNum + "-" + suffix
+}
+
 android {
     namespace 'com.github.aakumykov.yandex_disk_cloud_writer'
     compileSdk 34
@@ -28,6 +42,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    publishing {
+        singleVariant('release') {
+            withSourcesJar()
+        }
+    }
 }
 
 dependencies {
@@ -45,4 +64,17 @@ dependencies {
     api libs.okhttp
     api libs.gson
     api libs.disk.restapi.sdk
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = project.groupId
+            artifactId = project.artifactId
+            version = versionName
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
 }
