--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        manifestPlaceholders = [ YANDEX_CLIENT_ID: "630df4eaaeb9491bbd2a234050af5f32"]
     }
 
     buildTypes {
@@ -22,6 +24,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    buildFeatures {
+        viewBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -42,4 +47,20 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
+
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    implementation 'com.yandex.android:authsdk:3.0.0'
+
+    implementation "androidx.preference:preference-ktx:1.2.1"
+
+    implementation 'com.github.aakumykov:exception_utils:0.4'
+
+    implementation 'com.github.aakumykov:storage_access_helper:2.0.0-alpha'
+
+    implementation 'androidx.fragment:fragment-ktx:1.6.2'
+
+    implementation 'com.github.aakumykov:cloud_reader_2:3.1.0-alpha'
+//    implementation 'com.github.aakumykov:cloud_writer_2:3.2.0-alpha'
+//    implementation 'com.github.aakumykov:yandex_disk_cloud_writer:3.2.0-alpha'
 }
