Подключил copy_between_streams_with_counting:0.0.3-alpha, реализовал метод "putStream()" с подсчётом байтов в YandexDiskCloudWriter.

--- a/cloud_writer/build.gradle
+++ b/cloud_writer/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 
-
+    api 'com.github.aakumykov:copy_between_streams_with_counting:0.0.3-alpha'
 }
 
 publishing {
