--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
 
+        manifestPlaceholders = [YANDEX_CLIENT_ID:"630df4eaaeb9491bbd2a234050af5f32"]
+    }
+    buildFeatures {
+        viewBinding true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -44,4 +48,7 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
+
+    implementation libs.yandex.auth.helper
+
 }
