--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ material = "1.12.0"
 okhttp = "4.12.0"
 activity = "1.10.1"
 constraintlayout = "2.2.1"
+yandex_auth_helper = "0.0.5"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -25,6 +26,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+yandex_auth_helper = { module = "com.github.aakumykov:yandex_auth_helper", version.ref = "yandex_auth_helper" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
