--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,9 @@ android {
     namespace 'com.github.aakumykov.cloud_writer_2'
     compileSdk 35
 
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file("local.properties").newDataInputStream())
+
     defaultConfig {
         applicationId "com.github.aakumykov.cloud_writer_2"
         minSdk 21
@@ -17,6 +20,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         manifestPlaceholders = [YANDEX_CLIENT_ID:"630df4eaaeb9491bbd2a234050af5f32"]
+
+//        resValue "string", "default_account_iccid", properties.getProperty("default.account.iccid", "")
+        resValue "string", "yandex_disk_auth_token_for_tests", properties.getProperty("yandex_disk_auth_token", "")
     }
     buildFeatures {
         viewBinding true
