Добавил в build.gradle(app) динамическое создание ресурса "yandex_disk_auth_token_for_tests", инструментальный тест проверки его наличия.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,14 @@ android {
         versionCode 1
         versionName "1.0"
 
+        resValue "string", "yandex_disk_auth_token_for_tests", properties.getProperty("yandex_disk_auth_token_for_tests", "")
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         manifestPlaceholders = [YANDEX_CLIENT_ID:"630df4eaaeb9491bbd2a234050af5f32"]
 
 //        resValue "string", "default_account_iccid", properties.getProperty("default.account.iccid", "")
-        resValue "string", "yandex_disk_auth_token_for_tests", properties.getProperty("yandex_disk_auth_token", "")
+//        resValue "string", "yandex_disk_auth_token_for_tests", properties.getProperty("yandex_disk_auth_token", "")
     }
     buildFeatures {
         viewBinding true
