Подключил kotlinx-coroutines-test:1.10.2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
 
     androidTestImplementation(libs.kaspresso)
     androidTestUtil libs.androidx.orchestrator
+
+    testImplementation libs.kotlinx.coroutines.test
+    androidTestImplementation libs.kotlinx.coroutines.test
 }
