Заготовка фрагмента отправки файла на сервер.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
 
     testImplementation libs.kotlinx.coroutines.test
     androidTestImplementation libs.kotlinx.coroutines.test
+
+    implementation libs.file.lister.navigator.selector.x
 }
