implementation вместо api для libs.okhttp, libs.gson, libs.disk.restapi.sdk; v8.0.0-alpha

--- a/yandex_disk/build.gradle
+++ b/yandex_disk/build.gradle
@@ -61,9 +61,9 @@ dependencies {
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
 
-    api libs.okhttp
-    api libs.gson
-    api libs.disk.restapi.sdk
+    implementation libs.okhttp
+    implementation libs.gson
+    implementation libs.disk.restapi.sdk
 }
 
 publishing {
